[package]
name = "skynet-rs"
version = "0.1.0"
authors = ["cerebralcourt <0hhvxhv9@anonaddy.me>"]
edition = "2018"
license = "MIT"
description = "Sia Skynet API"
repository = "https://github.com/cerebralcourt/skynet-rs"

[dependencies]
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
mime = "0.3"
mime_guess = "2"
rand = "0.8"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textnonce = "1"
tokio = { version = "1.4", features = ["io-util", "macros", "io-std", "rt-multi-thread", "rt"] }
walkdir = "2"
tus_async_client = "0.2.1"
reqwest = { version = "0.11", features = ["stream"] }
futures = "0.3"
async-stream = "0.3.3"
async-trait = "0.1.56"
futures-util = "0.3"
env-file-reader = "0.3.0"
log = "0.4.17"